Refactor DTO usage